# multi-agent-demo

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: sample_traces.json
demo/: app.py  mock_llm.py  theme.py
demo/pages/: 2_Trace_Inspector.py
mesh/: __init__.py  coordinator.py  registry.py
orchestrator/: __init__.py  graph.py  nodes.py  planner.py  state.py  tools.py  vectorstore.py
tests/: test_coordinator.py  test_graph.py  test_parallel.py  test_planner.py  test_tools.py  test_trace_inspector.py  test_vectorstore.py
