[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-demo"
version = "0.1.0"
description = "Live Multi-Agent Orchestrator Demo — LangGraph + Mesh Coordinator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "streamlit>=1.41",
    "anthropic>=0.40",
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
include = ["orchestrator*", "mesh*", "demo*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
